fix:  修改了一个bug

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
 	<div>
 		<h1>建造一个车轮</h1>
+		<h1>fix a bug on v1.0.0</h1>
 	</div>
 </body>
 
